<resources>
    <string name="app_name">Trash For Life</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="api">https://tfl.000webhostapp.com/</string>
    <string name="api_img">https://tfl.000webhostapp.com/public/assets/images/</string>
    <string name="api_slider">https://tfl.000webhostapp.com/public/assets/sliders/</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">listActivity</string>
    <string name="beli">BELI</string>
    <string name="bayar">BAYAR</string>
    <string name="ketentuan">Harga belum termasuk biaya pengiriman</string>
    <string name="title_activity_search">searchActivity</string>
    <string name="hint_email">Alamat Email</string>
    <string name="hint_pass">Kata Sandi</string>
    <string name="lupasandi">Lupa Kata Sandi?</string>
    <string name="login">Login</string>
    <string name="fb">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="title_activity_jalur_login">Sign in</string>
    <string name="tidakpunyaakun">Tidak Punya Akun?</string>
    <string name="daftar">Buat Akun</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Alamat Email</string>
    <string name="prompt_password">Kata Sandi</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="keranjang_kosong">Keranjang Anda Kosong</string>
    <string name="ayo_belanja">Semua barang belajaanmu akan terdaftar disini. Ayo mulai belanja.</string>
    <string name="title_activity_pilih_jalur">pilihJalur</string>
    <string name="title_login">Login</string>
    <string name="title_daftar">Daftar</string>
    <string name="keuntungan_mendaftar">Keuntungan Mendaftar</string>
</resources>
